--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -12,11 +12,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: nhartland/love-build@v1-beta2
-      with:
-        app_name: 'BubbleBlast'
-        love_version: '11.3'
+    - name: Install dependencies
+      run: |
+        sudo apt-get install -q -y zip
+    - name: Package up
+      run: |
+        zip -r "BubbleBlast.love" ./* -x '*.git*'
     - uses: actions/upload-artifact@v1
       with:
-        name: built-applications
-        path: 'release'
+        name: BubbleBlast.love
+        path: BubbleBlast.love
